--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ html{
 }
 html, body{
     max-width: 100%;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     height: 100%;
     -webkit-font-smoothing: antialiased;
 }
@@ -6751,7 +6751,7 @@ header {
 
 html, body {
     max-width: 100%;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 .title-text {
